--- a/project-3/www/css/styles.css
+++ b/project-3/www/css/styles.css
@@ -1,3 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    font-size: 16px;
+}
+
 #container {
     display: flex;
 }
@@ -35,6 +47,5 @@
 
     #sidebar {
         width: 100%;
-        min-height: auto;
     }
 }
